added asset creationpage

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -9,13 +9,7 @@
 <br><br>
 <!--Header of dasbhoard-->
 <h1> {{ username }} // Dashboard</h1>
-<br>
-<nav class="nav nav-pills flex-column flex-sm-row">
-  <a class="flex-sm-fill text-sm-center bg-grey nav-link active" href="#">Active</a>
-  <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
-  <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
-  <a class="flex-sm-fill text-sm-center nav-link disabled" href="#">Disabled</a>
-</nav>
+
 <hr>
 <!--Splitting up in grid view for the graphs-->
 <div class="row">
@@ -224,7 +218,8 @@
   </br > {% endfor %}
   </div>    
 
-</div>t</div>
+</div>
+</div>
   
 </div>
 
