added depolyment script

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -72,9 +72,8 @@
         }
       });
     </script></div>
-</div
-
->
+</div>
+<!-- Drawing the doughnut chart-->
 <div class="row justify-content-between">
   <hr>
   <div class="col-sm-4"><canvas id="pieChart" width="900" height="200"></canvas>
