added the development server

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -91,7 +91,7 @@
                 </div>
                 <!-- About Section Button2-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-light" href="sign-up1">
+                    <a class="btn btn-xl btn-light" href="sign-up">
                         <i class="fas fa-user-plus me-2"></i>
                         Or Sign Up
                     </a>
