added a new styling idea to the /newstyle section

--- a/website/static/styles/styles.css
+++ b/website/static/styles/styles.css
@@ -35,6 +35,7 @@
   --bs-gray-900: #212529;
   --bs-primary: #f5e551;
   --bs-secondary: #b4e7da;
+  --bs-third: #ACADC6;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
